bug: Remove accidental horizontal scrollbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,10 +6,14 @@
     border: 0;
 }
 
+html {
+    width: 100%;
+}
+
 body {
     background-color: #a2daff;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     text-align: center;
     font-family: 'Lato', sans-serif;
     color: #fff;
@@ -24,7 +28,7 @@ header {
 
 .header-container {
     height: 80vh;
-    width: 100vw;
+    width: 100%;
     background: url(https://i.imgur.com/oMjJO6c.jpg) no-repeat bottom right fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -43,7 +47,7 @@ header {
 .header-text-container {
     background-color: #000;
     height: fit-content;
-    width: 100vw;
+    width: 100%;
     position: fixed;
     top: 0;
     left: 0;
@@ -55,7 +59,7 @@ h1 {
 }
 
 .name-text {
-    width: 40vw;
+    width: 40%;
     margin: auto;
     background-color: rgba(0,0,0,0.3);
     border-radius: 15px;
@@ -68,7 +72,7 @@ h1 {
 }
 
 p {
-    width: 70vw;
+    width: 70%;
     margin: 20px auto;
 }
 
@@ -80,12 +84,12 @@ p {
 /* ------------------------------------------------------------------------------------- Images */
 
 .image-container {
-    width: 94vw;
+    width: 94%;
     margin: auto;
 }
 
 img {
-    width: 25vw;
+    width: 25%;
     margin: 10px;
     border: 1px solid #000;
     border-radius: 10px;
